--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "morgan": "~1.8.1",
     "passport": "^0.4.0",
     "passport-twitter": "^1.0.4",
+    "request": "^2.81.0",
     "serve-favicon": "~2.4.2"
   }
 }
